--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
         <div class="education-block">
             <h3>University of California, Santa Cruz</h3>
-            <span class="education-date">September 2014 - June 2018/span>
+            <span class="education-date">September 2014 - June 2018</span>
             <h4>Bachelor of Science in Tecnology Information Mangement</h4>
         </div>
         <!-- End .education-block -->
