--- a/index.html
+++ b/index.html
@@ -130,13 +130,13 @@
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images/seagate-logo.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>Seagate Active Drive</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            I worked with a team sponsored by Seagate to research and explore the application of their newly developed Active Drives in the field of genomics. We worked in a Scrum/Agile environment and developed a distributed string search in on a set of parallel drives in a MapReduce cluster. Our program was written in C using htslib and Active API.
                         </p>
                         <a href="#">View Project</a>
                     </div>
@@ -146,13 +146,13 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images/busters.jpg" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
-                        <h3>Project Name Here</h3>
+                        <h3>Busters by LFG Game Devs</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
+                            I worked on a team in a Scrum/Agile environment to create an infinite run bullet-hell style shooter in JS.
                         </p>
                         <a href="#">View Project</a>
                     </div>
