--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/busters.jpg" />
+                        <img src="images/busters.png" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
