--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div id="lead-content">
             <h1>Richard Le</h1>
             <h2>Software Engineer</h2>
-            <a href="https://richardtcle.github.io/resume/richard's_resume.pdf" class="btn-rounded-white">Download Resume</a>
+            <a href="https://richardtcle.github.io/resume/richard_resume.pdf" class="btn-rounded-white">Download Resume</a>
         </div>
         <!-- End #lead-content -->
 
@@ -73,9 +73,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        My name is Richard Le and I am a new graduate with double majors in Computer Science
-                        and Technology Information Management from UC, Santa Cruz. I have a deep passion for
-                        computer science and software engineering. Here you will find more information about me. There is not too much at the moment, but hopefully I will be adding in more information soon. 
+                        I am currently a full-time software consultant with Infosys at Apple in Sunnyvale focused on big data analytics using Spark Scala and Hive. I am interested in pivoting towards Full-Stack development. I will be matriculating to Georgia Tech in Fall 2019 for a Masters in Computer Science with a focus in Machine Learning. 
                     </p>
                 </div>
             </div>
@@ -87,26 +85,30 @@
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
 
-            <div data-date="July 2014 – September 2017">
-                <h3>Self-Employed</h3>
-                <h4>Private Swim Instructor</h4>
+            <div data-date="October 2018 - Current">
+                <h3>Infosys</h3>
+                <h4>Software Consultant</h4>
                 <p>
-                    I used my expereince from my job as a lifeguard & swim instructor and decided to become a private swim instructor. I advertised my services on craigslist and built up a returning clientele. 
+                    Working onsite at Apple
+                    <ul>
+                        <li>Migrated an older code base from Hive Queries to Spark Scala which removed a lot of redundant queries, improved readability, and increased performance by up to 53%</li>
+                        <li>Wrote Spark Scala code to aggregate various metrics relating to Apple Music and perform analysis on large Hive tables according to business requirements</li>
+                        <li>Wrote Python scripts for report generation of data produced by Spark Queries</li>
+                    </ul>
                 </p>
-            </div>
-
-            <div data-date="June 2014 – September 2015">
-                <h3>Milpitas Sports Center</h3>
-                <h4>Lifeguard & Swim Instructor</h4>
-                <p>
-                    I was a red cross certified lifeguard & swim instructor. My responsibilities included effectively training and communicating with people of all ages and backgrounds.
-                </p>
-            </div>
         </div>
     </div>
     <!-- End #experience -->
 
     <div id="education">
+        <h2 class="heading">Education</h2>
+        <div class="education-block">
+            <h3>Georgia Institute of Technology</h3>
+            <span class="education-date">September 2019 - Expected 2022</span>
+            <h4>Masters of Science in Computer Science (online)</h4>
+            <h5>In-Progress</h5>
+        </div>
+        <!-- End .education-block -->
         <h2 class="heading">Education</h2>
         <div class="education-block">
             <h3>University of California, Santa Cruz</h3>
@@ -128,6 +130,23 @@
         <h2 class="heading">Projects</h2>
         <div class="container">
             <div class="row">
+                <!-- start -->
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/seagate-logo.jpg" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3>SmartBrain Face Recognition</h3>
+                        <p>
+                            Web application built to learn and explore fullstack technologies. App allows users to register and upload photos and will automatically detect faces present in the photos with the help of ClarifAI API. Front built in React.js with Redux and connects to a backend API built in Node.js with Express and uses PostGresQL as a database. The webapp is uploaded onto Heroku.
+                        </p>
+                        <a href="https://github.com/richardtcle/SmartBraine">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+                <!-- start  -->
                 <div class="project shadow-large">
                     <div class="project-image">
                         <img src="images/seagate-logo.jpg" />
@@ -167,8 +186,27 @@
     <div id="skills">
         <h2 class="heading">Skills</h2>
         <ul>
+            <li>Python</li>
+            <li>Javascript</li>
+            <li>Scala</li>
+            <li>Hive</li>
+            <li>PostGresQL</li>
+            <li>HTML</li>
+            <li>CSS</li>
             <li>Java</li>
-            <li>C</li>
+            <li>Hadoop</li>
+            <li>MapReduce</li>
+            <li>Spark</li>
+            <li>React.js</li>
+            <li>Redux</li>
+            <li>Node.js</li>
+            <li>Express</li>
+            <li>Babel</li>
+            <li>WebPack</li>
+            <li>Heroku</li>
+            <li>Knex.js</li>
+            <li>Bootstrap</li>
+            <li>FlexBox</li>
             <li>Git</li>
             <li>Scrum</li>
             <li>Agile</li>
@@ -195,7 +233,7 @@
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; 2018 Richard Le
+                        Copyright &copy; 2019 Richard Le
                     </p>
                 </div>
                 <div class="col-sm-2 top">
