--- a/index.html
+++ b/index.html
@@ -90,26 +90,25 @@
                 <h4>Software Consultant</h4>
                 <p>
                     Working onsite at Apple
-                    <ul>
-                        <li>Migrated an older code base from Hive Queries to Spark Scala which removed a lot of redundant queries, improved readability, and increased performance by up to 53%</li>
-                        <li>Wrote Spark Scala code to aggregate various metrics relating to Apple Music and perform analysis on large Hive tables according to business requirements</li>
-                        <li>Wrote Python scripts for report generation of data produced by Spark Queries</li>
-                    </ul>
+                    • Migrated an older code base from Hive Queries to Spark Scala which removed a lot of redundant queries, improved readability, and increased performance by up to 53%
+                    • Wrote Spark Scala code to aggregate various metrics relating to Apple Music and perform analysis on large Hive tables according to business requirements
+                    • Wrote Python scripts for report generation of data produced by Spark Queries
+
                 </p>
         </div>
     </div>
     <!-- End #experience -->
 
     <div id="education">
-        <h2 class="heading">Education</h2>
-        <div class="education-block">
-            <h3>Georgia Institute of Technology</h3>
-            <span class="education-date">September 2019 - Expected 2022</span>
-            <h4>Masters of Science in Computer Science (online)</h4>
-            <h5>In-Progress</h5>
-        </div>
         <!-- End .education-block -->
         <h2 class="heading">Education</h2>
+        <!-- start -->
+        <div class="education-block">
+            <h3>Georgia Institute of Technology</h3>
+            <span class="education-date">Matriculating September 2019 - Expected 2022</span>
+            <h4>Masters of Science in Computer Science (online, in progress)</h4>
+        </div>
+
         <div class="education-block">
             <h3>University of California, Santa Cruz</h3>
             <span class="education-date">September 2014 - June 2018</span>
@@ -133,7 +132,7 @@
                 <!-- start -->
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/seagate-logo.jpg" />
+                        <img src="smart-brain.png" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -141,7 +140,7 @@
                         <p>
                             Web application built to learn and explore fullstack technologies. App allows users to register and upload photos and will automatically detect faces present in the photos with the help of ClarifAI API. Front built in React.js with Redux and connects to a backend API built in Node.js with Express and uses PostGresQL as a database. The webapp is uploaded onto Heroku.
                         </p>
-                        <a href="https://github.com/richardtcle/SmartBraine">View Project</a>
+                        <a href="https://github.com/richardtcle/SmartBrain">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
