--- a/index.html
+++ b/index.html
@@ -86,14 +86,13 @@
         <div id="experience-timeline">
 
             <div data-date="October 2018 - Current">
-                <h3>Infosys</h3>
+                <h3>Infosys at Apple</h3>
                 <h4>Software Consultant</h4>
                 <p>
-                    Working onsite at Apple
-                    • Migrated an older code base from Hive Queries to Spark Scala which removed a lot of redundant queries, improved readability, and increased performance by up to 53%
-                    • Wrote Spark Scala code to aggregate various metrics relating to Apple Music and perform analysis on large Hive tables according to business requirements
+                    Working onsite at Apple <br>
+                    • Migrated an older code base from Hive Queries to Spark Scala which removed a lot of redundant queries, improved readability, and increased performance by up to 53%a<br>
+                    • Wrote Spark Scala code to aggregate various metrics relating to Apple Music and perform analysis on large Hive tables according to business requirements<br>
                     • Wrote Python scripts for report generation of data produced by Spark Queries
-
                 </p>
         </div>
     </div>
@@ -132,7 +131,7 @@
                 <!-- start -->
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="smart-brain.png" />
+                        <img src="images/smart-brain.png" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
